--- a/homework2/build.gradle
+++ b/homework2/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'homework2'
 version '1.0-SNAPSHOT'
 
+mainClassName = "other.Application"
 sourceCompatibility = 1.8
 
 repositories {
@@ -12,8 +14,15 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/com.google.inject/guice
     compile group: 'com.google.inject', name: 'guice', version: '4.2.2'
+}
 
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'homework2',
+                'Implmentation-Version': version,
+                'Main-Class': mainClassName
+
+    }
 }
