--- a/.gitignore
+++ b/.gitignore
@@ -9,15 +9,15 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
+.gradle
 # Package Files #
-*.jar
+//*.jar
 *.war
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
-
+.idea
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
